--- a/src/Storm.InterviewTest.Hearthstone/Views/Cards/index.cshtml
+++ b/src/Storm.InterviewTest.Hearthstone/Views/Cards/index.cshtml
@@ -1,10 +1,12 @@
-@model IEnumerable<Storm.InterviewTest.Hearthstone.Models.CardModel>
+@model Storm.InterviewTest.Hearthstone.Models.CardsModel
 @{
     ViewData["Title"] = "Home Page";
+    var items = new SelectList(ViewData["PlayerClasses"] as string[]).ToList();
+    items.Insert(0, new SelectListItem() {Text = "All", Value=""});
 }
 
 <div class="page-header">
-    <h2>Cards (Total: @Model.Count())</h2>
+    <h2>Cards (Total: @Model.Cards.Count())</h2>
 </div>
 
 <div class="row">
@@ -12,15 +14,16 @@
         <div class="row" style="margin-bottom: 10px">
             <div class="col-md-12">
                 <form class="form-inline" method="GET">
-                    <input class="form-control" type="search" name="q" id="q" value="" placeholder="search for cards..." />
-                    <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>    
+                    <select class="form-control" asp-for="PlayerClass" asp-items="@items"></select>
+                    <input class="form-control" type="search" asp-for="Q" placeholder="search for cards..."/>
+                    <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                 </form>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12">
                 <ul class="list-inline">
-                    @foreach (var card in Model)
+                    @foreach (var card in Model.Cards)
                     {
                         <li class="list-group-item">
                             @{ Html.RenderPartial("_Card", card); }
