--- a/src/Storm.InterviewTest.Hearthstone/Views/Shared/_Card.cshtml
+++ b/src/Storm.InterviewTest.Hearthstone/Views/Shared/_Card.cshtml
@@ -1,4 +1,5 @@
-@model Storm.InterviewTest.Hearthstone.Models.CardModel
+@using Storm.InterviewTest.Hearthstone.Controllers.Cards.Models
+@model Storm.InterviewTest.Hearthstone.Controllers.Cards.Models.CardModel
 
 <div class="row">
     <div class="col-md-12">
