--- a/src/Storm.InterviewTest.Hearthstone/Views/Shared/DisplayTemplates/MinionModel.cshtml
+++ b/src/Storm.InterviewTest.Hearthstone/Views/Shared/DisplayTemplates/MinionModel.cshtml
@@ -1,4 +1,5 @@
-@model Storm.InterviewTest.Hearthstone.Models.MinionModel
+@using Storm.InterviewTest.Hearthstone.Controllers.Cards.Models
+@model Storm.InterviewTest.Hearthstone.Controllers.Cards.Models.MinionModel
 
 <div class="panel panel-default">
     <div class="row">
